--- a/style.css
+++ b/style.css
@@ -1,3 +1,102 @@
+.carousel-card {
+	height: 100vh;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.carousel-item {
+	margin-top: -40px;
+}
+
+li {
+	list-style: none;
+	font-size: 1.2rem;
+	font-weight: 600;
+}
+
+.carousel-caption p {
+	font-size: 50px;
+	color: #fff;
+	padding-left: 20px;
+}
+
+.carousel-caption .caption-01 {
+	margin-top: -30px;
+}
+
+.carousel-caption span {
+	padding-left: 52px;
+	font-size: 1.5rem;
+	max-width: 60rem;
+}
+
+.carousel-caption .caption-02 {
+	padding-left: 52px;
+	font-size: 1.5rem;
+	max-width: 60rem;
+}
+
+.carousel-indicators {
+	position: absolute;
+	bottom: 8rem;
+	left: -81rem;
+}
+
+.carousel-indicators [data-bs-target] {
+	height: 6px;
+	width: 6px;
+	border-radius: 100%;
+	position: relative;
+}
+
+.carousel-caption {
+	top: 18rem;
+	text-align: left;
+}
+
+.button-01 {
+	margin-left: 52px;
+	background-color: #f5e903;
+}
+
+.button-02 {
+	background: #82589f;
+	color: #fff;
+}
+
+.carousel-caption button .second_row button {
+	padding: 1rem 2rem;
+	font-size: 1.4rem;
+	border: 0;
+	outline: none;
+	color: #fff;
+	transition: .5s;
+}
+
+.carousel-caption .button-02:hover {
+	background: #f5e903;
+	color: #000;
+}
+.carousel-caption .button-01:hover {
+	background: #82589f;
+	color: #fff;
+}
+.w-100 {
+	height: 100vh;
+}
+
+button {
+	border: none;
+	outline: none;
+	background: #fff;
+	color: #000;
+	font-size: 1.5rem;
+	padding: 1rem 2rem;
+	transition: 0.5s;
+	margin-top: 10px;
+}
+
 .card-button{
     background-color: rgb(100, 77, 122);
     color: white;
@@ -24,7 +123,6 @@
 }
 
 #cg1{
-
     margin-left: 25%;
     width: 50%;
 }
@@ -117,4 +215,81 @@
 #proj .card-footer:hover{
     background-color:rgb(255, 226, 60) ;
 }
+
+#zippy{
+    background:rgb(236, 236, 236); 
+    height: 800px;
+}
+
+.zippy-face {
+	max-width: 100%;
+	max-height: 400px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-left: 40%;
+}
+
+.thumbnail {
+	object-fit: cover;
+	max-width: 130px;
+	max-height: 70px;
+	cursor: pointer;
+	opacity: 0.8;
+	margin: 5px;
+}
+
+.thumbnail:hover {
+	opacity: 1;
+}
+
+.zippy-slide-wrapper {
+	max-width: 700px;
+	width: 650px;
+	margin: 0 auto;
+	display: flex;
+	min-height: 100px;
+	align-items: center;
+}
+
+.zippy-slider {
+	width: 600px;
+	display: flex;
+	flex-wrap: nowrap;
+	overflow-x: auto;
+}
+
+.zippy-slider::-webkit-scrollbar {
+	display: block;
+}
+
+.sign {
+	width: 30px;
+	height: 70px;
+	cursor: pointer;
+	transition: 0.3s;
+	background-color: #474747;
+}
+
+.sign:hover {
+	background-color: purple;
+}
+
+.marquee-wrapper {
+    overflow: hidden;
+  }
+.marquee {
+    display: flex;
+    animation-name: marquee;
+    animation-duration: 20s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-direction: alternate;
+    transform: translateX(0);
+  }
+@keyframes marquee {
+  from {transform: translateX(0);}
+  to {transform: translateX(-100%);}
+  }
+
 
